deploy/overlays/local/node-envida/components/terminology-server-proxy-gateway/terminology-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-terminology-server-proxy-gateway 
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: terminology.envida.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-terminology-server-proxy-route 
spec:
  parentRefs:
    - name: envida-terminology-server-proxy-gateway
  hostnames:
    - terminology.envida.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envida-terminology-server-proxy
          port: 8080
